--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,16 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
+  <!--v3.0新增的重置session有效时间的filter-->
+  <filter>
+    <filter-name>sessionExpireFilter</filter-name>
+    <filter-class>com.bookshop.controller.common.SessionExpireFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>sessionExpireFilter</filter-name>
+    <url-pattern>*.do</url-pattern>
+  </filter-mapping>
+
 
   <listener>
     <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
