--- a/src/main/resources.dev/bookshop.properties
+++ b/src/main/resources.dev/bookshop.properties
@@ -1,8 +1,8 @@
 #dev env
-ftp.server.ip=127.0.0.1
-ftp.port=10086
-ftp.username=root
-ftp.password=root
+ftp.server.ip=192.168.1.120
+ftp.port=21
+ftp.username=ftpuser
+ftp.password=123456
 ftp.server.http.prefix=http://image.bookshop.com/
 
 password.salt = lczxcvbnmsdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
@@ -17,10 +17,15 @@ redis.max.idle=10
 #\u6700\u5C0F\u7A7A\u95F2\u6570
 redis.min.idle=2
 
-#redis ip
-redis.ip=192.168.1.120
-#redis port
-redis.port=6379
+#redis1 ip
+redis1.ip=192.168.1.120
+#redis1 port
+redis1.port=6379
+
+#redis2 ip
+redis2.ip=192.168.1.120
+#redis2 port
+redis2.port=6380
 
 # \u5411\u8C03\u7528\u8005\u8F93\u51FA\u201C\u94FE\u63A5\u201D\u8D44\u6E90\u65F6\uFF0C\u662F\u5426\u68C0\u6D4B\u6709\u6548\u6027, \u5982\u679C\u65E0\u6548\u5219\u4ECE\u8FDE\u63A5\u6C60\u4E2D\u79FB\u9664\uFF0C\u5E76\u5C1D\u8BD5\u83B7\u53D6\u7EE7\u7EED\u83B7\u53D6. \u9ED8\u8BA4false\u5373\u4E0D\u68C0\u6D4B, true\u5219\u68C0\u6D4B, \u4FDD\u8BC1\u4E86\u8FDE\u63A5\u7684\u6709\u6548\u6027
 redis.test.borrow=true
